frontend/web/css/style.css
@charset "utf-8";
/* CSS Document */

/* -----------------------------------------
   * Filename: style.css
----------------------------------------- */
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	border: 0;
	outline: none;
	padding: 0;
}
/*font-family: 'Droid Sans', sans-serif;
font-family: 'Open Sans', sans-serif;*/


* {
	-moz-transition: all 0.3s ease-in-out;
	-webkit-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	-ms-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}
body {
	margin: 0px;
	padding: 0px;
	font-weight: normal;
	font-size: 14px;
	color: #30373b;
	line-height: normal;
	font-family: 'Droid Sans', sans-serif;
	background: url(../images/bg.jpg) 0 0 repeat-x;
}
a, a:hover, a:focus, .btn, .btn:focus, .btn:hover {
	outline: none;
}
h1, h1.welcome-line {
	font-size: 45px;
	text-transform: uppercase;
}
h1.welcome-line span {
	font-size: 20px;
	text-transform: none;
}
h2 {
	font-size: 40px;
}
h2:after {
	content: '';
	border-bottom: #ea0b44 3px solid;
	width: 60px;
	margin: 15px auto 20px;
	display: block;
}
h3 {
	font-size: 24px;
	color: #333333;
	font-weight: 700;
}
h4 {
	font-size: 20px;
	font-weight: 700;
}
.font-light {
	color: #949494;
	font-size: 15px;
	font-weight: normal;
}
.font20 {
	font-size: 20px;
}
.btn-primary {
	padding: 19px 29px;
	background: #ea0b44;
	border-radius: 2px;
	box-shadow: none;
	border: none;
	outline: none;
	font-size: 16px;
	text-transform: uppercase;
	font-family: 'Open Sans', sans-serif;
	font-weight: 700;
}
.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
	background: #F75E85
}
.mrg-bt-5 {
	margin-bottom: 5px;
}
.mrg-tp-0 {
	margin-top: 0px !important;
}
.mrg-tp-5 {
	margin-top: 5px !important;
}
.mrg-tp-10 {
	margin-top: 10px;
}
.mrg-tp-20 {
	margin-top: 20px;
}
.mrg-tp-30 {
	margin-top: 30px;
}
.mrg-bt-5 {
	margin-bottom: 5px !important;
}
.mrg-bt-10 {
	margin-bottom: 10px;
}
.mrg-bt-20 {
	margin-bottom: 20px;
}
.mrg-bt-30 {
	margin-bottom: 30px;
}
.mrg-lt-15 {
	margin-left: 15px;
}
.mrg-lt-20 {
	margin-left: 20px;
}
.mrg-lt-30 {
	margin-left: 30px;
}
.text-danger {
	color: #ea0b44;
}
.fa-lock.text-danger {
	font-size: 20px;
	color: #ea0b44;
}
.text-white {
	color: #fff;
}
.text-dark {
	color: #30373b;
}
section, .padd-sm {
	padding: 30px 0;
}
.padd-xs {
	padding: 15px 0;
}
.padd-20 {
	padding: 20px;
}
.padd-10 {
	padding: 10px;
}
.padd-hr-10 {
	padding-right: 0;
	padding-left: 0;
}
.padd-left-0{
    padding-left: 0;
}
.bg-white {
	background: #fff;
	border: #e2e2e2 1px solid;
}
/*--------Header
------------------------------------------------ */
header {
	position: relative;
	height: 100%;
	z-index: 999;
}
.video {
	position: relative;
	width: 100%;
	margin: 0;
	padding: 0;
	height: 632px;
	z-index: 9;
}
video {
	width: 100%;
}
.drop-effect {
	background: rgba(0, 0, 0, 0.14);
	position: absolute;
	width: 100%;
	height: 100%;
}
.play {
	margin-top: 30px;
	position: relative;
}
.play:active {
	top: 2px;
}
.over-header2 {
	position: absolute;
	top: -23px;
	left: 0;
	right: 0;
	padding-top: 25px;
	height: 100%;
}
.over-header {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	padding-top: 25px;
}
.welcome-text {
	position: absolute;
	top: 30%;
}
.search-filter .dropdown-menu {
	top: 61%;
	left: 14px;
}
.search-filter div.cs-select {
	border-radius: 5px;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
}
.header-inner .help {
	margin-top: 35px;
}
header.smaller .header-inner .help {
	margin-top: 10px;
}
.header {
	position:absolute;
	top: -620px;
	left: 0;
	right: 0;
	padding-top: 10px;
	padding-bottom: 5px;
}
.header-inner {
	position: static;
	padding-top: 0px;
	background: #fff;
	z-index: 99999;
	height: 84px;
}
header[role=header] {
	position: static;
}
header[role=header] .over-header {
	padding: 0;
}
/*header.smaller .header {
	background: rgba(255, 255, 255, 0.94);
	z-index: 999;
	box-shadow: #DEDEDE 0px 0px 8px;
}
header.smaller .header .menu li a {
	color: #c93438;
}
header.smaller .header .menu li:last-child {
	border-color: #c93438
}*/
.header .logo .img2 {
	display: none;
	-moz-transition: all 0.5s ease-in-out;
	-webkit-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	-ms-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}
header.smaller .header .logo .img1 {
	display: none;
	-moz-transition: all 0.5s ease-in-out;
	-webkit-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	-ms-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}
header.smaller .header .logo .img2 {
	display: block;
	height: auto;
	-moz-transition: all 0.5s ease-in-out;
	-webkit-transition: all 0.5s ease-in-out;
	-o-transition: all 0.5s ease-in-out;
	-ms-transition: all 0.5s ease-in-out;
	transition: all 0.5s ease-in-out;
}
header.smaller .header-inner {
	background: rgba(255, 255, 255, 0.8);
	z-index: 99999;
	padding-top: 10px;
}
.header .menu li {
	font-size: 14px;
	margin-top: 20px;
}
.header .menu li:last-child {
	border: #fff 2px solid;
	padding: 10px 20px;
	margin-left: 10px;
}
.header .menu li a {
	color: #fff;
	text-transform: uppercase;
}
.welcome-content {
	position: absolute;
	top: -351px;
	left: 0;
	right: 0;
	color: #ffffff;
	text-align: center;
}
.search-filter {
	position: absolute;
	bottom: 100%;
	left: 0;
	right: 0;
	background: rgba(0, 0, 0, 0.63);
	height: 100px;
}
.filter {
	position: relative;
	margin-top: 19px;
}
.filter .btn {
	margin: 0;
}
.featured-member {
	padding: 30px 0;
	background: #fff;
	position: relative;
	z-index: 99;
}
main {
	background: #f7f8f8;
	margin-top: 84px;
	font-family: 'Open Sans', sans-serif;
	border-top: #ccc 1px solid;
}
/* ... */

